--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portifólio de projetos</title>
+		<title>Portfólio de projetos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -58,7 +58,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Olá, seja muito bem vindo(a) ao meu portifólio de projetos de Ciência de Dados</a>.</h2>
+								<h2 class="alt">Olá, seja muito bem vindo(a) ao meu Portfólio de projetos de Ciência de Dados</a>.</h2>
 								<p>Nessa página, eu apresento as minhas habilidades de resolver problemas de negócio utilizando
 									ferramentas e os conceitos da Ciência de dados, através de projetos com base em dados públicos.
 									Aqui você também irá encontrar uma lista contendo todas minhas habilidades e as ferramentas do 
